update sway and waybar config

--- a/.config/waybar/style-dark.css
+++ b/.config/waybar/style-dark.css
@@ -43,6 +43,7 @@
 }
 
 /* Each module */
+#mpd
 #battery,
 #clock,
 #cpu,
@@ -61,6 +62,9 @@
 /* -----------------------------------------------------------------------------
  * Module styles
  * -------------------------------------------------------------------------- */
+#mpd {
+
+}
 
 #battery {
     animation-timing-function: linear;
